<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff">

            <TextView
                android:id="@+id/popupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/enter_task_text"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginBottom="10dp">

            </TextView>


            <EditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/popupTitle"
                android:inputType="text"
                android:hint="@string/task_title_text">

            </EditText>

            <EditText
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/taskTitle"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:hint="@string/task_description_optional">

            </EditText>

            <Spinner
                android:id="@+id/taskPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:background="@drawable/for_spinner"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_below="@+id/taskDescription">

            </Spinner>


            <Button
                android:id="@+id/taskDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/taskPriority"
                android:layout_marginTop="20dp"
                android:shadowColor="#dafffb"
                android:textColor="#777"
                android:background="#f5f5f5"
                android:text="@string/pick_a_date_text">
            </Button>


            <Button
                android:id="@+id/addBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/taskDate"
                android:background="@drawable/simple_btn"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:text="@string/add_text">

            </Button>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>